--- a/project2/packages.html
+++ b/project2/packages.html
@@ -16,7 +16,7 @@
 			#wrapper {
 					background: linear-gradient(#f0d562,#61721c);
 			        opacity:0.9; 
-			         height:1750px;
+			         height:3000px;
 			         width:1200px;
 			         margin:0 auto;
 					 border-radius: 50px;
@@ -100,7 +100,210 @@
 						padding-left:270px;
 						color:black;
 			           }
-			
+			#body2 {
+				  height:300px;
+				  border: 5px solid #3a5705;
+				  box-sizing: border-box;
+				  border-radius: 10px;
+				  background-color:#9c9a3e;
+				  margin:10px;
+			        }
+			#exphead {
+					font-family:"Georgia", serif;	
+					font-size:30px;
+					text-shadow: 2px 1px #3a5705;
+					text-align:center;
+			         }
+			#expcontent {
+						font-size:20px;
+						text-align:justify;
+						margin:30px;
+						text-indent: 50px;
+						line-height: 1.5;
+						}
+			#packhead {
+					font-family:"Georgia", serif;	
+					font-size:25px;
+					text-shadow: 2px 1px #3a5705;
+					text-align:center;
+			          }
+			.pack {
+			       height:250px;
+				   margin-left:150px;
+				   margin-right:150px;
+				   margin-top:50px;
+				   }
+			#left1 {
+			        float:left;
+					width:30%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-image:url("images/pack1.jpg");
+					background-size:cover;
+					}
+			#right1 {
+			        float:right;
+					width:69%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-color:#9c9a3e;
+			        }
+			.packday {
+			         font-size:22px;
+					 padding-left:40px;
+					 margin-top:180px;
+					 color:white;
+					 border: 1px solid #f26522;
+					 box-sizing: border-box;
+					 background-color:#f26522;
+					}	
+            .packname {
+			         font-size:25px;
+					 padding-left:40px;
+					 font-family:"Georgia", serif;	
+					 text-align:center;	
+					 color:#3a5705;
+					 text-shadow: 2px 1px black;
+					}
+            .packdescr {
+						text-align:center;	
+						}
+			.packplace {
+						text-align:center;
+						 color:#790000;
+						}
+			.packprice {
+						text-align:center;
+						font-size:20px;
+						color:white;
+                       }
+             .moreinfo {
+			            text-decoration:none;
+						font-size:20px;
+						margin-left:100px;
+						border: 1px solid  #3a5705;
+						box-sizing: border-box;
+						background-color:#f26522;
+						border-radius: 5px;
+						color:white;
+						font-weight: bold;
+                       }
+			 .enquire {
+			            text-decoration:none;
+						font-size:20px;
+						margin-left:100px;
+						border: 1px solid  #3a5705;
+						box-sizing: border-box;
+						background-color:#f26522 ;
+						border-radius: 5px;
+						color:white;
+						font-weight: bold;
+                       }	
+			#left2 {
+			        float:left;
+					width:30%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-image:url("images/ayurvedic.jpg");
+					background-size:cover;
+					}
+			#right2 {
+			        float:right;
+					width:69%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-color:#9c9a3e;
+			        }
+			#left3 {
+			        float:left;
+					width:30%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-image:url("images/pack3.jpg");
+					background-size:cover;
+					}
+			#right3 {
+			        float:right;
+					width:69%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-color:#9c9a3e;
+			        }	
+			#left4 {
+			        float:left;
+					width:30%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-image:url("images/munnar.jpg");
+					background-size:cover;
+					}
+			#right4 {
+			        float:right;
+					width:69%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-color:#9c9a3e;
+			        }	
+			#left5 {
+			        float:left;
+					width:30%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-image:url("images/package5.jpg");
+					background-size:cover;
+					}
+			#right5 {
+			        float:right;
+					width:69%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-color:#9c9a3e;
+			        }	
+			#left5 {
+			        float:left;
+					width:30%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-image:url("images/package5.jpg");
+					background-size:cover;
+					}
+			#right5 {
+			        float:right;
+					width:69%;
+					height:250px;
+					border: 5px solid #e5ad00;
+				    box-sizing: border-box;
+				    border-radius: 25px;
+					background-color:#9c9a3e;
+			        }	
+			.click {
+			        font-size:30px;
+					color:white;
+					margin-left:400px;
+					text-decoration :none;
+			       }
 			</style>
 	</head>
 	<body>
@@ -136,7 +339,94 @@
 			<div id="body1">
 				<span id="discount"><b>Recommended Kerala Packages 30% Discount on all bookings for This Month <a href="#">Book Now</a></b></span>
 			</div>
-		  
+		    <br>
+			<div id="body2">
+				<h2 id="exphead">KERALA TOUR PACKAGES</h2>
+				<p id="expcontent">Finding ideal Kerala tour packages for couple, Kerala tour packages for family or Kerala 
+				tour packages with price that goes gentle with your budget is getting tougher! Be it online or offline,
+				tour costs (with most of the operators) are rocketing up with the boost in Kerala tourism.While booking
+				tour packages, our patrons can also avail destination pick-ups, transportation, local stays, and other
+				exciting things that can make Kerala holidays even more wonderful. To add more to the magical beauty 
+				of God’s Own Country, we also offer customised Kerala tour packages for family, tailor-made Kerala 
+				tour packages for couple, corporate packages, and lot more.</p>
+			</div>
+			<br>
+			<div id="body3">
+			<h3 id="packhead">PACKAGES</h3>
+			<div id="pack1" class="pack">
+				<div id="left1" class="left">
+				<h5 class="packday">7 Days and 6 Nights</h5>	
+				</div>	
+				<div id="right1" class="right">
+				<h2 class="packname">GOD&#39;S OWN COUNTRY PACKAGE<h2>
+				<h3 class="packdescr">DESTINATIONS COVERED:</h3>
+				<h4 class="packplace">KOVALAM-ALAPUZHA-MUNNAR-THEKKADY-FORT KOCHI-WAYAND</h4>
+				<h4 class="packprice">$2000</h4>
+				<a href="#" class="moreinfo">MORE INFO</a>
+				<a href="#" class="enquire">ENQUIRE NOW</a>
+				</div>
+			</div>
+			<br>
+			<div id="pack2" class="pack"> 
+				<div id="left2" class="left">
+				<h5 class="packday">15 Days and 14 Nights</h5>	
+				</div>	
+				<div id="right2" class="right">
+				<h2 class="packname">AYURVEDIC TREATMENT PACKAGE<h2>
+				<h3 class="packdescr">TREATMENTS COVERED:</h3>
+				<h4 class="packplace">PANCHAKARMA-ELAKIZHI-NJAVARAKIZHI-PIZHICHIL-SIROVASTHI</h4>
+				<h4 class="packprice">$3000</h4>
+				<a href="#" class="moreinfo">MORE INFO</a>
+				<a href="#" class="enquire">ENQUIRE NOW</a>
+				</div>
+			</div>
+			<br>
+			<div id="pack3" class="pack"> 
+				<div id="left3" class="left">
+				<h5 class="packday">5 Days and 4 Nights</h5>	
+				</div>	
+				<div id="right3" class="right">
+				<h2 class="packname">ADVENTURE SPORTS PACKAGE<h2>
+				<h3 class="packdescr">ACTIVITIES COVERED:</h3>
+				<h4 class="packplace">PARAGLIDING-RAFTING-HILL CLIMBING-CANYONING-HIKING</h4>
+				<h4 class="packprice">$1500</h4>
+				<a href="#" class="moreinfo">MORE INFO</a>
+				<a href="#" class="enquire">ENQUIRE NOW</a>
+				</div>
+			</div>
+			<br>
+			<div id="pack4" class="pack"> 
+				<div id="left4" class="left">
+				<h5 class="packday">7 Days and 6 Nights</h5>	
+				</div>	
+				<div id="right4" class="right">
+				<h2 class="packname">MAGICAL KERALA PACKAGE<h2>
+				<h3 class="packdescr">DESTINATIONS COVERED:</h3>
+				<h4 class="packplace">ALAPUZHA-MUNNAR-THEKKADY-ATHIRAPILLY-BEKAL FORT</h4>
+				<h4 class="packprice">$2000</h4>
+				<a href="#" class="moreinfo">MORE INFO</a>
+				<a href="#" class="enquire">ENQUIRE NOW</a>
+				</div>
+			</div>
+			<br>
+			<div id="pack5" class="pack"> 
+				<div id="left5" class="left">
+				<h5 class="packday">8 Days and 7 Nights</h5>	
+				</div>	
+				<div id="right5" class="right">
+				<h2 class="packname">ROMANTIC HONEYMOON PACKAGE<h2>
+				<h3 class="packdescr">DESTINATIONS COVERED:</h3>
+				<h4 class="packplace">KUMARAKOM-MUNNAR-ATHIRAPILLY-BEKAL FORT-WAYANAD</h4>
+				<h4 class="packprice">$2500</h4>
+				<a href="#" class="moreinfo">MORE INFO</a>
+				<a href="#" class="enquire">ENQUIRE NOW</a>
+				</div>
+			</div>
+			<br>
+			<br>
+			<div >
+			<a href="#" class="click">Click here to see more Packages<a>
+			</div>
 		</div>
 	</body>
 </html>
