--- a/project2/index.html
+++ b/project2/index.html
@@ -65,11 +65,11 @@
 			#title h1 {
 					  padding-left:150px;
 					  padding-top:10px;
-					  font-size:30px;
+					  font-size:50px;
 					  text-shadow: 3px 2px #3a5705;
 					  }
 			#title h3 {
-					  padding-left:155px;
+					  padding-left:225px;
 					  color:#3a5705;
 					  }	  
 			#nav  {
@@ -251,7 +251,6 @@
 						float:left;
 						width:33.33%;
 						height:200px;
-						background-color:blue;
 						border: 5px solid #3a5705;
 						box-sizing: border-box;
 						border-radius: 25px;
@@ -264,7 +263,6 @@
 						float:left;
 						width:33.33%;
 						height:200px;
-						background-color:yellow;
 						border: 5px solid #3a5705;
 						box-sizing: border-box;
 						border-radius: 25px;
@@ -275,7 +273,6 @@
 						float:right;
 						width:33.33%;
 						height:200px;
-						background-color:red;
 						border: 5px solid #3a5705;
 						box-sizing: border-box;
 						border-radius: 25px;
@@ -288,7 +285,6 @@
 						float:left;
 						width:33.33%;
 						height:200px;
-						background-color:blue;
 						border: 5px solid #3a5705;
 						box-sizing: border-box;
 						border-radius: 25px;
@@ -299,7 +295,6 @@
 						float:left;
 						width:33.33%;
 						height:200px;
-						background-color:yellow;
 						border: 5px solid #3a5705;
 						box-sizing: border-box;
 						border-radius: 25px;
@@ -310,7 +305,6 @@
 						float:right;
 						width:33.33%;
 						height:200px;
-						background-color:red;
 						border: 5px solid #3a5705;
 						box-sizing: border-box;
 						border-radius: 25px;
@@ -322,6 +316,7 @@
 					   	background-color:#3a5705;
 						border:1px solid #3a5705;
 						border-radius: 5px;
+						color:white;
 					}
 					
 			#subsection3 {
@@ -385,8 +380,8 @@
 				<div id="nav">
 				<ul>
 					<li> <a href="#" target="_blank" class="nav">Home</a></li>
-					<li><a href="#" target="_blank" class="nav"> Explore &amp; Experience</a></li>
-					<li><a href="#" target="_blank" class="nav">Famous Destinations</a></li>
+					<li><a href="explorepage.html" target="_blank" class="nav"> Explore &amp; Experience</a></li>
+					<li><a href="destinationspage.html" target="_blank" class="nav">Famous Destinations</a></li>
 					<li><a href="#" target="_blank" class="nav">Packages</a></li>
 					<li><a href="#" target="_blank" class="nav">Plan your Trip</a></li>
 					<li><a href="#" target="_blank" class="nav">Gallery</a></li>
